--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,22 +2,32 @@
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>MSc (Tech) in Electrical Engineering</h1>
+            <span>Tampere University of Technology</span>
+            <span><address>Tampere, Finland</address><time>2014 to 2017</time></span>
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>Thesis: Will post later</em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>MBA in International Business Management</h1>
+            <span>Tampere University of Applied Sciences</span>
+            <span><address>Tampere, Finland</address><time>2018 to 2019</time></span>
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+            <em>Dissertation: Will post later </em>
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>BSc in Electrical and Electronic Engineering</h1>
+            <span>American International University-Bangladesh</span>
+            <span><address>Dhaka, Bangladesh</address><time>2007 to 2011</time></span>
+        </header>
+        <p>
+            <em>Dissertation: Will post later </em>
         </p>
     </article>
 </section>
