--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,8 +2,8 @@
     <h1>Initiatives</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>Service Designer</h1>
+            <span><address>Tampere University of Applied Sciences (TAMK)</address><time>2019</time></span>
         </header>
         <p>
             Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
@@ -11,8 +11,8 @@
     </article>
     <article>
         <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
+            <h1>Nokia 2020 Hackathon Winner</h1>
+            <span><address>Aalto University, Finland</address><time>2020</time></span>
         </header>
         <p>
             Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
