--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
     <h1>Projects</h1>
     <article>
         <header>
-            <h1>Service Designer</h1>
+            <h1>Website Automation with Robot Framework and Selenium</h1>
             <span><address>Tampere University of Applied Sciences (TAMK)</address><time>2019</time></span>
         </header>
         <p>
@@ -11,8 +11,26 @@
     </article>
     <article>
         <header>
-            <h1>Nokia 2020 Hackathon Winner</h1>
+            <h1>Radio network planning of Tallinn, Estonia by using a commercial tool ’ICS Designer’</h1>
             <span><address>Aalto University, Finland</address><time>2020</time></span>
+        </header>
+        <p>
+            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>RFID Testing in EMC with Voyantic Tagformance. </h1>
+            <span><address>Tampere University of Technology, Finland</address><time>2020</time></span>
+        </header>
+        <p>
+            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>Project on WCDMA measurements </h1>
+            <span><address>Tampere University of Technology, Finland</address><time>2020</time></span>
         </header>
         <p>
             Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
