--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,13 +2,22 @@
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc (Tech) in Electrical Engineering</h1>
+            <h1>MSc (Tech) in Electrical Engineering (Major: Wireless Communication)</h1>
             <span>Tampere University of Technology</span>
             <span><address>Tampere, Finland</address><time>2014 to 2017</time></span>
         </header>
         <p>
-            <em>Thesis: Will post later</em>
+            <em>Thesis: Comparison of performance and stability of different wearable passive
+                UHF RFID tags in body-worn configurations. Achieved Grade: 4 (out of 5)</em>
         </p>
+        <article>
+    </article>
+        <article>
+            <header>
+                <h1>5G Summer School</h1>
+                <span>Aalto University</span>
+                <span><address>Espoo, Finland</address><time>2020 to 2020</time></span>
+            </header>
     </article>
     <article>
         <header>
@@ -17,7 +26,7 @@
             <span><address>Tampere, Finland</address><time>2018 to 2019</time></span>
         </header>
         <p>
-            <em>Dissertation: Will post later </em>
+            <em>Dissertation: Educating the Entrepreneurial and Growth-Oriented Mindset. Achieved Grade: 4 (out of 5) </em>
         </p>
     </article>
     <article>
@@ -27,7 +36,8 @@
             <span><address>Dhaka, Bangladesh</address><time>2007 to 2011</time></span>
         </header>
         <p>
-            <em>Dissertation: Will post later </em>
+            <em>Dissertation: Design and implementation of Radio Frequency (RF) heartbeat monitoring system
+                Thesis grade: 4 (out of 4)  </em>
         </p>
     </article>
 </section>
