--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,45 +1,123 @@
 <section class="thirteen columns">
+    <h1>CAREER OBJECTIVE</h1>
+    <!-- <article>
+        <header>
+            <h1>Integrify Oy</h1>
+            <h1>Data Science and Machine Learning Trainee</h1>
+            <span><address>Helsinki, Finland</address><time>2020 to Present</time></span>
+        </header> -->
+            <p> A software tester or system verification engineer, background in manual testing of software written in C++, C#. I have time management, collaborative skills, and experience in system/software verification and validation. I aim to work in an IT industry where I can utilize my expertise in resolving the problems in testing as well as advocate my analytical skills towards the growth of the organization in the development and execution of overall testing strategy.
+            </p>
+    </article>
+    <h1></h1>
+    <section class="thirteen columns">
+    <h1>ACHIEVEMENT</h1>
+        <!-- <article>
+            <header>
+                <h1>Integrify Oy</h1>
+                <h1>Data Science and Machine Learning Trainee</h1>
+                <span><address>Helsinki, Finland</address><time>2020 to Present</time></span>
+            </header> -->
+            <p> I have built the skills needed to identify and learn about bugs and other mistakes in the quality assurance so that the developers can fix them. I have learned to give input to the test managers/PM so that they can meet the deadline. Familiar with reading reviews and customer complaints to sweep a piece of software entirely and find a possible bug. Prioritizes analytical skills to perform activities in the most detailed and effective manner possible.
+            </p>
+    </article>
+        <h1></h1>
+<section class="thirteen columns">
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Tramigo Oy</h1>
+            <h1>Integrify Oy</h1>
+            <h1>Data Science and Machine Learning Trainee</h1>
             <span><address>Helsinki, Finland</address><time>2020 to Present</time></span>
         </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
+        <p> Learning data science and machine learning useing libraries such as Pandas, Numpy, Scikit learn. Also working extensively in Python, Linux, Github.
         </p>
     </article>
     <article>
         <header>
+            <h1>Tramigo Oy</h1>
+            <h1>Technical Sales Enginner</h1>
+            <span><address>Helsinki, Finland</address><time>2020 to Present</time></span>
+        </header>
+        <p> • Assisting in technical troubleshooting & product development <p>
+        <p> • Monitoring HQ technical support <p>
+        <p> • Liaise with the sales & logistics department <p>
+        <p> • Managing cloud platforms and services.<p>
+        <p> • Tramigo Cloud website and Android App Testing <p>
+        <p> • Different GPS and GSM tracker testing and loading firmware and configuration <p>
+        <p> • Testing of Tramigo T-23, T-24, OBD devices <p>
+        </p>
+    </article>
+    <article>
+        <header>
+            <h1>Varian Medical System</h1>
             <h1>System Verification Enginner</h1>
             <span><address>Helsinki, Finland</address><time>2019 to 2020</time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
+        <p> • Recruited by Academic Work and worked as a Test Engineer in System Verification Team <p>
+        <p> • Design and execute test cases for system verification in the radiation treatment planning and management software including treatment on the actual treatment device. Execute special test scenarios such as end-to-end system tests, smoke, compatibility (interface) tests, upgrade tests <p>
+        <p> • Collected test environment requirements based on the verification scope, order, and reserve virtual (software, system) as well as physical (test lab, treatment machines) test environments as preparation for the actual verification activity <p>
+        <p> • Create, track, retest, and close defects based on failed test execution and during formal or explorative testing <p>
+        <p> • Summarize and report test results, traceability reports and make recommendations for software releases <p>
+        <p> • orked in Scrum and Agile methodologies <p>
+        <p>                                                                                           <p>
+        <p>                                                                                           <p>  
+        <p>                                                                                           <p> 
+        <p>    Keywords: Agile, OIS and (Eclipse) TPMS, DICOM, MVDS, and Queue connection, CITRIX, vCloud and vApps, Troubleshooting, C++, C#, Photon, Proton Treatment Unit </p>
     </article>
     <article>
         <header>
+            <h1>Lionbridge Oy</h1>
             <h1>QA Enginner</h1>
             <span><address>Tampere, Finland</address><time>2017 to 2019</time></span>
         </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
+        <p>  • Linguistic Test for Lionbridge’s projects <p>
+        <p>  • Setup of software/tools according to client instructions to prepare for testing <p>
+        <p>  • Functional Test for Lionbridge’s project and Lionbridge partners’ projects: test software applications using QA tools <p>
+        <p>  • Understanding product in order to test efficiently – specification creation, review, and maintenance test <p>
+        <p>  • Enumerate all necessary steps to reproduce a defect, as well as documenting the test environment. Report defects according to respective guidelines <p>
+        <p>  • Execute test scripts (automated or manual) or perform ad hoc testing following the instructions as set out in the test specifications and other testing documentation <p>
+        <p>  • Project : Linguistic Test and training for Apple’s digital Assistant – Siri, Micrsoft's Cortana, Motorola's Hello Moto <p>
+        <p>    <p>
+        <p>    <p>
+        <p>    Keywords: Octave script automation testing, Localization Testing, Regression Testing, Reporting, Test Coordination, Data collection and representation, Bug reporting, Troubleshooting etc.</p>
     </article>
     <article>
         <header>
+            <h1>Demola Oy</h1>
+            <h1>Project Worker</h1>
+            <span><address>Tampere, Finland</address><time>2015 to 201</time></span>
+        </header>
+        <p>  • Worked on Intel Finland Oy and Suunto Oy Project. Won the prizes for the project work <p>
+       
+        
+    </article>
+    <article>
+        <header>
+            <h1>Tampere University of Technology</h1>
             <h1>Teaching Assistant</h1>
             <span><address>Tampere University of Technology</address><time>2016 to 2017</time></span>
         </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
+        <p> • Conducted LTE Demo sessions under the Basic course on Wireless Communication course <p>
+        <p> • Drive test using NEMO outdoor software <p>
+            
+        <p>    Keywords: UHF Passive RFID, Performace & Stability of RFID, Antenna Testing, EMC, Voyantic Tagformance, MATLAB, LTE, DriveTest, NEO Outdoor, Indoor Radio Network </p>
     </article>
     <article>
         <header>
+            <h1>Metropolitan University, Bangladesh</h1>
             <h1>Senior Lecturer, Department of Electrical Engineering</h1>
             <span><address>Metropolitan University, Sylhet, Bangladesh</address><time>2013</time></span>
         </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
+        <p>    • Conducted lectures <p>
+        <p>    • Taking Class tests, Quizzes, and assignments <p>
+        <p>    • I have updated the course contents and prepared necessary annotations and guidelines for the students to solve engineering problems <p>
+        <p>    • Supervise under-graduate final year project (FYP) students <p>
+        <p>    • Co-ordination of undergraduate lab experiment <p>
+        <p>    • Supervised industrial attachment (IA) for final year students <p>
+        <p>    • Prepare course curriculum for undergraduate students <p>
+        <p>    • Member of CRP (Center for Research and Publication) at Metropolitan University <p>
+        <p>    • Many other services for the benefit of School and University.</p>
     </article>
 
 </section>
