--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -3,19 +3,20 @@
     <article>
         <header>
             <h1>Service Designer</h1>
-            <span><address>Tampere University of Applied Sciences (TAMK)</address><time>2019</time></span>
+            <span><address>Tampere University of Applied Sciences (TAMK)</address><time>2019 to 2019</time></span>
         </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
+            Project work as a part of course work. The main objective of the project was to carry out a survey and to formulate a development plan based on the survey results.
+
         </p>
     </article>
     <article>
         <header>
             <h1>Nokia 2020 Hackathon Winner</h1>
-            <span><address>Aalto University, Finland</address><time>2020</time></span>
+            <span><address>Aalto University, Finland</address><time>2020 to 2020</time></span>
         </header>
         <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+            Attended the course for learning the basics of 5G and Nokia's solution towards the 5G ecosystem. The final project was a desktop console app wrote in C# and integrated it to Azure Face API. It won the Nokia Prize.
         </p>
     </article>
 </section>
