--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,19 +1,73 @@
 <section class="thirteen columns">
-    <h1>Programming Skills</h1>
+    <h1>Skills & Competences</h1>
     <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>Software Engineering</h1>
         </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;<em>C/C++</em>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>Git</em>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Java</em>
         </p>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Robot Framework, Selenium, CI/CD, Linux</em>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Python</em>
         </p>
+        <header>
+            <h1>Test Automation</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Robot Framework</em>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Selenium</em>
+        </p>
+    </p>
+    <header>
+        <h1>Linux</h1>
+    </header>
+    <p>
+        <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+        &nbsp;&nbsp;<em>Ubunto 18.04 LTS</em>
+    <p>
+    </p>
+    <header>
+        <h1>SCM</h1>
+    </header>
+    <p>
+        <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+        &nbsp;&nbsp;<em>Git</em>
+    <p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Jenkins</em>
+        <p>
+        </p>
+        <header>
+            <h1>Software Verification and Validation</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>System Verification (E2E, Regression, Smoke, Interopability) </em>
+        <p>
+        </p>
+        <header>
+            <h1>Testing SW, ALM and Defect Management</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em> Microsoft Test Manager Pro, TFS ADLM, JIRA, HP ALM </em>
+        <p>
+        </p>
+        <header>
+            <h1>Methodologies</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em> Agile-Scrum, Kanban, Lean </em>
+        <p>
     </article>
 </section>
